--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -1,12 +1,12 @@
 server {
     listen 80;
-    server_name sylius.local;
+    server_name weddingstore.io.vn;
     return 301 https://$host$request_uri;
 }
 
 server {
     listen 443 ssl;
-    server_name sylius.local;
+    server_name weddingstore.io.vn;
 
     ssl_certificate     /etc/nginx/certs/sylius.crt;
     ssl_certificate_key /etc/nginx/certs/sylius.key;
