--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -8,8 +8,8 @@ server {
     listen 443 ssl;
     server_name weddingstore.io.vn;
 
-    ssl_certificate     /etc/nginx/certs/sylius.crt;
-    ssl_certificate_key /etc/nginx/certs/sylius.key;
+    ssl_certificate     /etc/nginx/certs/weddingstore.io.vn.crt;
+    ssl_certificate_key /etc/nginx/certs/weddingstore.io.vn.key;
 
     root /srv/sylius/public;
     index index.php;
